[8676] split some converting logic from EcoNewsService to separate classes